--- a/src/Styles/_variables.scss
+++ b/src/Styles/_variables.scss
@@ -1,9 +1,9 @@
 $clear: #fff;
 $medium-clear: #fffffffd;
 $medium: #AAA;
-$dark: #000;
+$dark: #2e2e2e;
 
-$primary: #692626;
-$secondary: #2b2b2b;
+$primary: #2e2e2e;
+$secondary: #eeeeee;
 
 $menu-link-color: rgba(255, 255, 255, 0.65);
