feat (skills & lang): refacto switch lang and complete skills timeline

--- a/src/AppWrapper/App.scss
+++ b/src/AppWrapper/App.scss
@@ -22,3 +22,19 @@
   background-color: $secondary;
 
 }
+
+.language {
+  font-style: italic;
+}
+
+.red {
+  color : $red;
+}
+
+.blue {
+  color: $blue;
+}
+
+.cyan {
+  color: $cyan;
+}
