--- a/src/Styles/_variables.scss
+++ b/src/Styles/_variables.scss
@@ -1,9 +1,12 @@
-$clear: #fff;
-$medium-clear: #fffffffd;
-$medium: #AAA;
+$primary: #383838;
+$secondary: #cecece;
+
+$clear: #f8f6f6;
 $dark: #2e2e2e;
 
-$primary: #2e2e2e;
-$secondary: #eeeeee;
+$red: #f5222d;
+$blue: #1890ff;
+$cyan: #13c2c2;
+$green: #C0C867;
 
-$menu-link-color: rgba(255, 255, 255, 0.65);
+
