--- a/src/Components/Profile/styles.scss
+++ b/src/Components/Profile/styles.scss
@@ -5,14 +5,22 @@
 
   .ant-avatar {
     background-color: $green;
-    margin-right: 15px;
+    width: 100px;
+    height: 100px;
+    line-height: 100px;
+    box-shadow: 5px 4px 4px $medium;
+
+    .ant-avatar-string {
+      transform: scale(1) translateX(-50%);
+    }
   }
 
   .avatar {
-    width: 20%;
+    text-align: center;
   }
 
   .content {
-    width: 80%;
+    padding: 40px 0 0 50px;
+    font-size: 17px;
   }
 }
