--- a/src/Styles/_variables.scss
+++ b/src/Styles/_variables.scss
@@ -1,7 +1,8 @@
-$primary: #383838;
+$primary: #424242;
 $secondary: #cecece;
 
 $clear: #f8f6f6;
+$medium: lighten($primary, 40%);
 $dark: #2e2e2e;
 
 $red: #f5222d;
