--- a/src/Components/Card/styles.scss
+++ b/src/Components/Card/styles.scss
@@ -7,6 +7,7 @@
   margin-left: 5px;
   background-color: $clear;
   border-radius: 5px 5px 5px 5px;
+  box-shadow: 5px 5px 5px $medium;
 
   .caret {
     position: absolute;
@@ -23,7 +24,7 @@
   .card {
     padding: 15px;
     background-color: $clear;
-
+    border-radius: 0 0 5px 5px;
   }
 
   h3 {
