feat (profile & compatibility): add profile part and polyfills for IE 11
Add text and dark magic to Profile component
Fix margin LanguageSelector component
Add react-app-polyfills, element-remove & edit browserlist in package.json

--- a/src/AppWrapper/LanguageSelector/styles.scss
+++ b/src/AppWrapper/LanguageSelector/styles.scss
@@ -2,6 +2,7 @@
 
 .language-selector-component {
   position: relative;
+  margin-top: -15px;
 
   .icon-language-selector {
     position: relative;
