--- a/src/Styles/_variables.scss
+++ b/src/Styles/_variables.scss
@@ -1,13 +1,11 @@
-$primary: #424242;
-$secondary: #cecece;
+$primary: #0984e3;
+$secondary: #636e72;
 
 $clear: #f8f6f6;
-$medium: lighten($primary, 40%);
-$dark: #2e2e2e;
+$dark: #b4b4b4;
 
 $red: #f5222d;
 $blue: #1890ff;
 $cyan: #13c2c2;
 $green: #C0C867;
-
 
