--- a/src/Components/Card/card.scss
+++ b/src/Components/Card/card.scss
@@ -5,9 +5,6 @@
   height: auto;
   width: 100%;
   margin-left: 5px;
-  background-color: $clear;
-  border-radius: 5px 5px 5px 5px;
-  box-shadow: 5px 5px 5px $medium;
 
   .caret {
     position: absolute;
@@ -18,20 +15,21 @@
     border-top: 5px solid transparent;
     border-bottom: 15px solid transparent;
 
-    border-right:10px solid $green;
+    border-right:10px solid $primary;
   }
 
   .card {
     padding: 15px;
-    background-color: $clear;
     border-radius: 0 0 5px 5px;
+    border: 1px solid $primary;
+    border-top: none;
   }
 
   h2 {
       margin: 0;
       padding: 7px 15px;
       border-radius: 5px 5px 0px 0px;
-      background-color: $green;
+      background-color: $primary;
       color: $clear;
     }
 
@@ -46,6 +44,4 @@
 
       }
     }
-
-
 }
