feat (style): add style for christmas
Create a script to make snow fall
add a cute christmas hat
change color though the script

--- a/src/AppWrapper/LanguageSelector/language-selector.scss
+++ b/src/AppWrapper/LanguageSelector/language-selector.scss
@@ -7,6 +7,16 @@
   .content {
     width: 115px;
     margin: auto;
+
+  }
+
+  .christmas-hat {
+    position: absolute;
+    z-index: 999;
+    margin-top: -15px;
+    width: 120px;
+    height: 120px;
+    display: none;
   }
 
   .icon-language-selector {
